# rust-grpc-shorty

./: .gitignore  Cargo.toml  README.md  build.rs
proto/: shorty.proto
src/: main.rs  shorty.rs  shorty_grpc.rs
