[package]
name = "rust-grpc-shorty"
version = "0.1.0"
authors = ["Neville Dipale <nevilledips@gmail.com>"]
build = "build.rs"

[dependencies]
grpc            = "~0.4"
protobuf        = "~1.6"
futures         = "~0.1"
futures-cpupool = "~0.1"
tls-api         = "0.1.19"

[build-dependencies]
protoc-rust-grpc = "0.4.0"
#protoc = "2.0"
#protoc-rust = "2.0"
